Fix janky left align for delete button in admin panel (mobile view) using flexbox

--- a/expo/src/Admin.css
+++ b/expo/src/Admin.css
@@ -100,18 +100,6 @@
   flex-basis: 6rem;
 }
 
-.m-r-m {
-  margin-right: 1rem;
-}
-
-.m-b-m {
-  margin-bottom: 1rem;
-}
-
-.shrink-0 {
-  flex-shrink: 0;
-}
-
 .upload-btn-wrapper {
   position: relative;
   overflow: hidden;
