--- a/expo/src/App.css
+++ b/expo/src/App.css
@@ -146,10 +146,30 @@ html {
 }
 
 /* Layout */
-.float-left {
-  margin: 0px 240px;
-}
-
 .break-word {
   word-break: break-word;
+}
+
+.flex {
+  display: flex;
+}
+
+.justify-space-between {
+  justify-content: space-between;
+}
+
+.m-r-s {
+  margin-right: 0.5rem;
+}
+
+.m-r-m {
+  margin-right: 1rem;
+}
+
+.m-b-m {
+  margin-bottom: 1rem;
+}
+
+.shrink-0 {
+  flex-shrink: 0;
 }
